# shadow-worker

./: .cursorrules  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SConstruct  archive_godot.ps1  archive_godot.sh  build.ps1  build_and_test.bat  create_icon.py  create_npc.py  create_player.py  create_tileset.py  entity_types.h  generate_sprites.py  icon.svg.import  project.godot  refactoring_plan.md  shadow-worker.code-workspace  shadow_worker.gdextension
.cursor/rules/: project-rule.mdc
Input/: PlayerInputActions.inputactions
addons/asset_manager/: asset_manager.gd  asset_manager_dock.gd  plugin.cfg
art/templates/rooms/combat/: advanced_combat.json
assets/: npc.png.import  player.png.import
assets/tiles/: tileset.png.import
docs/: README.md  architecture.md  phase_one.md  template_system.md  test_dir_structure.md  unity_architecture.md  unity_transition.md
docs/api/: README.md  map_system.md
docs/architecture/: resource_system.md  system_design.md  template_system.md  world_system.md
docs/getting_started/: README.md
docs/guides/: README.md  validation.md
docs/workflows/: build_process.md
include/: constants.h  entity.h  entity_pool.h  entity_types.h  estate_map.h  game.h  logger.h  map_system.h  map_types.h  resource_manager.h  resource_types.h  sound_manager.h  warning_suppression.h  world.h  world_gen.h
include/core/: component_flags.h  component_registry.h  game.h  game_state.h
include/entities/: entity.h  entity_pool.h  entity_types.h  npc.h  player.h
include/resource/: resource_manager.h  resource_types.h  texture_atlas.h  texture_manager.h
include/utils/: constants.h  crash_handler.h  debug.h  logger.h  object_types.h  warning_suppression.h
include/world/: map.h  map_system.h  map_types.h  room.h  room_loader.h  world.h  world_gen.h
resources/: manifest.txt  tileset.tres
resources/maps/: tileset_config.json
resources/maps/room_templates/: basic_room.json
resources/shaders/: distortion.fs  resonance.vs
scenes/: Main.tscn  generate_assets.tscn  npc.tscn  player.tscn  test_tilemap.tscn  test_world.tscn
scenes/objects/: base_object.tscn  container.tscn  crate.tscn  lamp.tscn  pickaxe.tscn  plant.tscn  workbench.tscn
scripts/: asset_config.json  asset_management.ps1  asset_management.psm1  base_object.gd  check_headers.sh  constants.gd  container.gd  debug_overlay.gd  generate_assets.gd  main.gd  npc.gd  pickaxe.gd  player.gd  process_art.ps1  process_assets.ps1  test_tilemap.gd  tilemap_manager.gd  world_generation.gd  world_system.gd
scripts/AssetManagement/: AssetManagement.psd1  AssetManagement.psm1
scripts/Core/PersonalitySystem/: ConsciousnessField.cs  PersonalityProfile.cs
scripts/Core/Types/: CoreTypes.cs
scripts/Core/VisualEffects/: PsychologicalEffectsManager.cs
scripts/Player/: PlayerController.cs
scripts/UI/: PsychologicalStateUI.cs
shaders/: reality_distortion.gdshader
shadow_workspace/: CMakeLists.txt
shadow_workspace/include/: constants.h  entity.h  entity_pool.h  entity_types.h  estate_map.h  map_system.h  map_types.h  resource_manager.h  resource_types.h  sound_manager.h  texture_manager.h  world.h  world_gen.h
shadow_workspace/include/entities/: npc.h  player.h
shadow_workspace/include/world/: room.h
shadow_workspace/src/: CMakeLists.txt  component_registry.c  entity.c  entity_pool.c  game_impl.c  main.c  map_system.c  texture_manager.c  world.c
shadow_workspace/src/core/: entity.c  estate_map.c  map.c  map.h  map_system.c  resource_manager.c  room_loader.c  room_loader.h  sound_manager.c  world_gen.c
shadow_workspace/src/entities/: npc.c  player.c
shadow_workspace/tests/: CMakeLists.txt  test_env.c  test_main.c  test_map_gen.c  test_resource_manager.c
shadow_workspace/tests/include/: test_suites.h
shadow_workspace/tests/resources/shaders/: distortion.vs
shadow_workspace/tests/suites/: test_core_systems.c  test_integration.c  test_map.c  test_memory.c  test_texture_manager.c  test_world.c
src/: CMakeLists.txt  entity.c  entity_pool.c  example.cpp  example.h  example.windows.template_debug.x86_64.obj.import  game.c  game_impl.c  main.c  map_system.c  npc.cpp  npc.h  npc.windows.template_debug.x86_64.obj.import  personality_system.cpp  personality_system.h  player.cpp  player.h  player.windows.template_debug.x86_64.obj.import  reality_system.cpp  reality_system.h  register_types.cpp  register_types.h  register_types.windows.template_debug.x86_64.obj.import  texture_manager.c  visual_effects_manager.cpp  visual_effects_manager.h  world.c  world_system.cpp  world_system.h
src/core/: component_registry.c  entity.c  game.c  logger.c  map.c  map.h  map_system.c  map_test.c  resource_manager.c  sound_manager.c  texture_atlas.c  texture_manager.c  world_gen.c
src/entities/: entity.c  entity_pool.c  npc.c  player.c
src/resource/: texture_manager.c
src/utils/: crash_handler.c  debug.c  object_types.c
src/world/: estate_map.c  map.c  map_system.c  room.c  room_loader.c  world.c  world_gen.c
tests/: CMakeLists.txt  mock_npc.gd  mock_reality_system.gd  mock_visual_effects.gd  run_tests.gd  test_constants.gd  test_env.c  test_logger.gd  test_main.c  test_personality_reality_interaction.gd  test_personality_reality_interaction.tscn  test_reality_system.gd  test_runner.gd  test_scene.tscn  test_template_scaling.ps1  test_visual_effects.gd  test_world_generation.gd  test_world_generation.tscn
tests/EditMode/: PersonalitySystemTests.cs
tests/include/: test_suites.h
tests/resources/maps/room_templates/: basic_room.json
tests/resources/shaders/: resonance.fs
tests/suites/: test_core_systems.c  test_integration.c  test_logger.c  test_map.c  test_memory.c  test_resource_manager.c  test_world.c
tools/: generate_font.py  generate_resources.py  generate_sounds.py  generate_sprites.py  requirements.txt  setup_and_generate.ps1
